# libdxfrw

./: CMakeLists.txt  drw_base.h  drw_entities.cpp  drw_entities.h  drw_header.cpp  drw_interface.h  drw_objects.cpp  drw_objects.h  libdwgr.cpp  libdwgr.h  libdxfrw.cpp  libdxfrw.h
intern/: drw_dbg.cpp  drw_dbg.h  drw_textcodec.cpp  drw_textcodec.h  dwgbuffer.cpp  dwgbuffer.h  dwgreader.cpp  dwgreader.h  dwgreader15.h  dwgreader18.cpp  dwgreader18.h  dwgreader21.cpp  dwgreader21.h  dwgreader24.h  dwgreader27.h  dwgreader32.h  dxfwriter.cpp  dxfwriter.h
